--- a/CITS5501/prject1/style.css
+++ b/CITS5501/prject1/style.css
@@ -22,3 +22,97 @@ img {
    width: 50%;
  }
 
+ @keyframes slideInLeft {
+   from {
+     transform: translateX(-300px);
+   }
+   to {
+     transform: translateX(0);
+   }
+}
+
+.header-container {
+   display: flex;
+   align-items: center; 
+   gap: 10px;
+}
+
+.header-container img {
+   margin: 0; 
+   padding-bottom: 10px;
+
+}
+
+.header-container h1 {
+   margin: 0; 
+}
+
+.header-icon{
+   margin-left: 10px;
+}
+
+#about-section {
+   animation-name: slideInLeft;
+   animation-duration: 1.2s;
+   animation-timing-function: ease-in;
+   animation-delay: 0s;
+}
+
+#profile-pic{
+   float: left;
+   margin-right: 20px;
+   padding-top: 20px;
+   margin-right: 40px;
+}
+
+#summary-box {
+   position: fixed;
+   bottom: 50%;
+   right: 0;
+   background-color: grey;
+   color: white;
+   padding: 12px 16px;
+   border-radius: 12px;
+   font-weight: bold;
+   z-index: 9999;
+}
+
+.hidden{
+   opacity: 0;
+   transition: all 2s;
+}
+
+.show{
+   opacity: 1;
+   transition: all 2s;
+}
+
+@keyframes slideInRight {
+   from {
+     transform: translateX(800px);
+   }
+   to {
+     transform: translateX(0);
+   }
+}
+
+#about-me-content{
+   animation-name: slideInRight;
+   animation-duration: 1.2s;
+   animation-timing-function: ease-in;
+   animation-delay: 0s;
+}
+
+.skill-icon{
+   width: 50px;
+   height: 50px;
+   margin: 10px;
+   display: inline-block;
+   background-size: cover;
+   transition: .5s ease;
+
+}
+.skill-icon:hover{
+   transform: scale(1.2);
+   transition: .5s ease;
+}
