--- a/CITS5501/prject1/style.css
+++ b/CITS5501/prject1/style.css
@@ -11,7 +11,6 @@ nav {
 }
 
 .navbar-brand {
-   font-family: "EB Garamond";
    font-style: bold;
    font-weight: 800;
 }
@@ -21,8 +20,6 @@ img {
    margin: auto;
    width: 50%;
 }
-
-
 
 @keyframes slideInLeft {
    from {
@@ -120,4 +117,71 @@ img {
 .skill-icon:hover {
    transform: scale(1.2);
    transition: .5s ease;
+}
+
+.timeline{
+   position: relative;
+   max-width: 1200px;
+   margin: 100px auto;
+}
+
+.container-timeline{
+   padding: 10px 40px;
+   position: relative;
+   width: 50%;
+}
+
+.timeline-text-box{
+   padding: 20px 30px;
+   background: tomato;
+   position: relative;
+   border-radius: 6px;
+   font-size: 15px;
+}
+
+#left-container{
+   left: 0;
+}
+#right-container{
+   left: 50%;
+}
+#right-container img{
+   left: -580px;
+}
+.container-timeline img{
+   position: absolute;
+   width: 40px;
+   border-radius: 50%;
+   right: -20px;
+   top: 32px;
+   z-index: 10;
+}
+.timeline-text-box h2{
+   font-weight: 600;
+}
+
+.timeline-text-box small{
+   display: inline-block;
+   margin-bottom: 15px;
+}
+.timeline::after{
+   content: '';
+   position: absolute;
+   width: 6px;
+   height: 100%;
+   background: red; /* Corrected the color code by removing the '#' */
+   top: 0;
+   left: 50%;
+   margin-left: -3px;
+   z-index: -1;
+   animation: moveline 6s linear forwards;
+}
+
+@keyframes moveline{
+   0%{
+      height: 0;
+   }
+   100%{
+      height: 100%;
+   }
 }
